KDEV-490 update version, add port scanner discovery, update icons and publishing information